[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ActionSelectPopup.gd" type="Script" id=1]

[node name="YesNoPopup" type="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9
margin_top = 10.0
margin_bottom = -50.0

[node name="ButtonsContainer" type="HBoxContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.9
anchor_right = 0.95
anchor_bottom = 0.95
margin_top = -50.0
alignment = 1

[node name="ButtonYes" type="Button" parent="ButtonsContainer"]
margin_right = 458.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "Да"

[node name="ButtonNo" type="Button" parent="ButtonsContainer"]
margin_left = 462.0
margin_right = 921.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "Нет"

[connection signal="pressed" from="ButtonsContainer/ButtonYes" to="." method="button_pressed"]
[connection signal="pressed" from="ButtonsContainer/ButtonNo" to="." method="button_pressed"]
